--- a/booleancareers-ex-hamburger-menu-base-6862becc9f78/index.html
+++ b/booleancareers-ex-hamburger-menu-base-6862becc9f78/index.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
         <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
         <title>Hamburger Menu</title>
     </head>
     <body>
